frontend/sass/_tables.scss
.usa-table-borderless {
  thead {
    background-color: $color-gray-lightest;
  }

  th:first-child {
    padding-left: 1rem;
  }
}

.table-full-width.log-table {
  font-size: 1.45rem;

  pre {
    margin: 0;
    // max-height: 200px;
    // overflow: auto;
    white-space: pre-wrap;
  }


  th, td {
    // min-width: 124px;
    padding: 1.5rem 1rem;
    line-height: 1.4em;    
    vertical-align: middle;
  }

  th:first-child {
    padding-left: 1rem;
  }


  .build-info {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: flex-start;
  }
  .build-info-prefix {
    margin-right: 0.75em;
    margin-bottom: 0.5em;
    font-size: 1em;
    line-height: 2rem;
    font-family: Consolas, "Lucida Console", Menlo, monospace;
  }
  .scan-info-inline-icon,
  .build-info-inline-icon {
    margin: auto .35em auto 0;
    line-height: 0;
    svg {
      width: auto;
      height: 20px;
    }
  }
  .scan-info,  
  .scan-results-status,
  .build-info-details {
    flex: 4;
    line-height: 1.4em;
    min-height: 3em;
    p {
      font-size: 1.45rem;
      margin: 0;
      white-space: initial;
      line-height: 1.4em;
    }
    h3{
      display: flex;
      margin: 0 0 .25em;
      font-size: 1.4em;
      line-height: 1.4em;
    }
    h4 {
      display: flex;
      align-items: center;
      font-weight: 600;
      font-size: 1.2em;
      line-height: 1.4em;
      color: #112e51;
    }
  }
  .build-info-logs-link {
    font-size: 1.45rem;
    margin: .25em 0;
    font-weight: normal;
  }
  .repo-link, .view-site-link, .result-link, .branch-link, .commit-link {
    // font-weight: 600;
    svg {
      fill: $link-color;
      width: 12px;
      height: auto;
      margin-right: .3em;
      vertical-align: middle;
    }
  }
  .result-link {
    font-weight: bold;
  }
  .branch-info {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 36ch;
    margin: 1em 0 0;
    line-height: 1.3em;
  }
  .commit-info {
    margin: 0.25em 0 0;
    .commit-user {
      white-space: nowrap;
      font-weight: 600;
      margin-right: .5em;
    }
    .commit-time {
      white-space: nowrap;
    }
    // .commit-sha,
    .sha-link {
      font-family: Consolas, "Lucida Console", Menlo, monospace;
      font-size: .85em;
      white-space: nowrap;
      overflow: hidden;
      text-overflow:clip;
      max-width: 7ch;
      display: inline-block;
      vertical-align: top;
      line-height: .85em;
      height: 1.4em;
      padding-top: 0.4em;
      text-decoration: none;
      margin-right: .5em;
      color: inherit;
      &:hover {
        text-decoration: underline;
      }
    }
  }
  .unstyled-list {
    list-style: none;
    padding: 0;
    margin: 0;
  }
  .results-list {
    li {
      margin: .25em 0;
      line-height: 1.4em;
      white-space: nowrap;
    }
  }
  .table-actions {
    
    a {
      margin: 0;
    }
    form {
      & + form {
        margin-top: .5em;
      }
    }
  
    .small-button {
      margin-bottom: 0;
      padding: 0.4em 0.6em;
      font-size: 1.1em;
      border-radius: 4px;
      white-space: nowrap;
    
      svg {
        margin-right: .4em;
        height: 1em;
        width: auto;
        vertical-align: bottom;
        .envelope-icon {
          fill: currentColor
        }
      }
      
    }
  }
  & + p { margin-top: 1em;}

}

.table-full-width.log-table__site-scans,
.table-full-width.log-table__site-builds {
  @media screen and (min-width:770px) {
    th {
      white-space: nowrap;
    }
  }
  td, tbody th {
    padding: 1.5rem 1rem;
  }
  .scan-results-pseudo-row {
    background: #112e510f;
    &::before {
      background: #112e510f;
    }
  }
  .no-scan-results {
    height: 0;
    margin-top: -2px;
    &::before {
      display: none;
    }
  }
  @media screen and (min-width: 990px) {
    tr.build-has-scans {
      position: relative;
      th, td {
        padding-bottom: 5.5rem;
      }
    }
    .build-info {
      flex-direction: row;
      .build-info-prefix {
        margin-right: 0.75em;
        line-height: 3rem;
        text-align: right;
        min-width: 7ch;
      }
    }
    .scan-results-pseudo-row {
      padding:0;
      width: 0;
      div {
        line-height: 2.75rem;
        display: block;
        position: absolute;
        background: #112e510f; 
        left: 0;
        bottom: 0;
        width: 100%;
        padding: 0.5em 2rem .5em 1em;
        &.label-warning {
          background-color: #fdb81e40;
        }
      }
    }
  }

  @media screen and (max-width: 990px) {
    display: block;
    width: 100%;

    thead {
      position: absolute;
      left: -999em;
    }

    tbody {
      display: block;

      tr {
        display: block;
        border: 1px solid rgb(104, 104, 104);
        position: relative;
      }

      td > *:first-child {
        margin-left: 1.5em;
      }
      td > *:nth-child(2) {
        margin-left: auto;
      }

      .branch-info {
        margin: 1em 1.5em;         
        max-width: fit-content;
      }
      .commit-info {
      }
      .results-list {
        margin: 1em auto;         
        .unstyled-list {
          padding: 0;
          li {
            display: inline-block;
            margin-right: .5em;
          }
        }
      }
      th, td {
        display: flex;
        align-items: stretch;
        padding: 0;
        position: relative;
        vertical-align: top;

        > * {
          margin: 1em 1.5em;
        }
        &:first-child {
          padding-left: 0
        }

        &::before {
          background-color: #eef4fb;
          padding: 1.5rem;
          color: $color-blue-dark;
          content: attr(data-title);
          flex: none;
          font-weight: bold;
          margin-right: .25rem;
          max-width: 10.5rem;
          text-align: left;
          width: 50%;
        }

        p {
          font-size: 1.5rem;
        }
      }
    }
  }
}

.table-full-width {
  width: 100%;
  td,
  th {
    padding: 1rem;
  }
}

.table-full-width.log-table__site-builds.org-member-table {
  td, tbody th {
    vertical-align: middle;
  }
}
.log-table.log-table__site-scans {
 .branch-info {
    margin: auto 0;
  }
  .scan-info h3 {
    margin: 0
  }
  .artifact-filesize {
    color: $color-gray-dark;
    white-space: nowrap;
  }
  .scan-results-status {
    min-height: initial;
    h4 {
      margin: 0;
    }
  }
}

